3.0.3/_sources/gallery/units/units_sample.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_units_units_sample.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_units_units_sample.py:


======================
Inches and Centimeters
======================

The example illustrates the ability to override default x and y units (ax1) to
inches and centimeters using the `xunits` and `yunits` parameters for the
`plot` function. Note that conversions are applied to get numbers to correct
units.

.. only:: builder_html

   This example requires :download:`basic_units.py <basic_units.py>`





.. image:: /gallery/units/images/sphx_glr_units_sample_001.png
    :class: sphx-glr-single-img





.. code-block:: python

    from basic_units import cm, inch
    import matplotlib.pyplot as plt
    import numpy as np

    cms = cm * np.arange(0, 10, 2)

    fig, axs = plt.subplots(2, 2)

    axs[0, 0].plot(cms, cms)

    axs[0, 1].plot(cms, cms, xunits=cm, yunits=inch)

    axs[1, 0].plot(cms, cms, xunits=inch, yunits=cm)
    axs[1, 0].set_xlim(3, 6)  # scalars are interpreted in current units

    axs[1, 1].plot(cms, cms, xunits=inch, yunits=inch)
    axs[1, 1].set_xlim(3*cm, 6*cm)  # cm are converted to inches

    plt.show()


.. _sphx_glr_download_gallery_units_units_sample.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: units_sample.py <units_sample.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: units_sample.ipynb <units_sample.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
